[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/fonts/fontawesome-free-5.15.4-desktop/otfs/Font Awesome 5 Free-Regular-400.otf" type="DynamicFontData" id=1]
[ext_resource path="res://src/QuestionnaireConfiguration/RandomizationGroups/RandomizationGroupDisplay.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[node name="RandomizationGroupDisplay" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_top = 293.0
margin_right = 33.0
margin_bottom = 307.0
text = "From"

[node name="FromBox" type="SpinBox" parent="."]
margin_left = 37.0
margin_right = 111.0
margin_bottom = 600.0

[node name="Label2" type="Label" parent="."]
margin_left = 115.0
margin_top = 293.0
margin_right = 128.0
margin_bottom = 307.0
text = "to"

[node name="ToBox" type="SpinBox" parent="."]
margin_left = 132.0
margin_right = 206.0
margin_bottom = 600.0

[node name="DeleteButton" type="Button" parent="."]
margin_left = 996.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 10
custom_fonts/font = SubResource( 1 )
text = "ÔÅó"

[connection signal="value_changed" from="FromBox" to="." method="_on_FromBox_value_changed"]
[connection signal="value_changed" from="ToBox" to="." method="_on_ToBox_value_changed"]
[connection signal="pressed" from="DeleteButton" to="." method="_on_DeleteButton_pressed"]
